--- a/_posts/articles/2017-05-02-kogelus.md
+++ b/_posts/articles/2017-05-02-kogelus.md
@@ -1,7 +1,7 @@
 ---
 layout: article
-title: "Kogelus"
-categories: articles
+title: "Soovitused lapsevanemale, kelle laps kogeleb."
+categories: media
 excerpt: "Tühi rida"
 author: kirja_tsura
 tags: [Häälduspuuded, readability, test]
