--- a/_posts/articles/2017-05-02-kogelus.md
+++ b/_posts/articles/2017-05-02-kogelus.md
@@ -6,6 +6,9 @@ excerpt: "Tühi rida"
 author: kirja_tsura
 tags: [Häälduspuuded, readability, test]
 ads: false
+image:
+  teaser: kurekellad.jpg
+
 ---
 
 Lapseeas esineb paljudel lastel normaalset sujumatust, st. kogeluse sarnast kõnet. Sel juhul laps kordab tavaliselt sõna või fraasi ilma, et huuled, keel või lõug oleksid väga pinges. See on paljude väikeste laste puhul osa rääkima õppimise protsessist ning last ennast see ei häiri. Normaalne sujumatus möödub iseenesest.  Siiski algab ka kogelus enamasti just lapseeas. Seetõttu on oluline eristada, millal on tegu normaalse sujumatusega ning millal algava kogelusega.  Vahel on see lapsevanema jaoks raske ning tasub tulla logopeedi vastuvõtule lihtsalt üheks konsultatsiooniks, et selgitada välja, kas on vaja jätkata kõneraviga.
